// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#322A51",
          "borderRadius": 7,
          "height": 46,
          "justifyContent": "center",
          "shadowRadius": 4,
          "width": 670,
        },
        undefined,
      ]
    }
  >
    <ActivityIndicator
      animating={false}
      color="#D2DCFF"
      hidesWhenStopped={true}
      size="small"
      style={
        Object {
          "height": 12,
          "left": 15,
          "position": "absolute",
          "top": 15,
        }
      }
    />
    <RNLinearTextGradient
      accessible={true}
      allowFontScaling={true}
      colors={
        Array [
          4294962687,
          4292663551,
          4292736255,
        ]
      }
      ellipsizeMode="tail"
      gradientEnd={
        Object {
          "x": 1,
          "y": 1,
        }
      }
      gradientStart={
        Object {
          "x": 0,
          "y": 0,
        }
      }
      locations={
        Array [
          0,
          0.5,
          1,
        ]
      }
      style={
        Array [
          Object {
            "color": "gray",
          },
          Object {
            "fontFamily": "System",
            "fontSize": 11,
            "fontWeight": "600",
            "letterSpacing": 0.41,
          },
        ]
      }
    >
      06B5F369-EC66-4E0A-8777-90C71DEC3F7B
    </RNLinearTextGradient>
  </View>
</View>
`;

exports[`Button renders correctly as disabled 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#322A51",
          "borderRadius": 7,
          "height": 46,
          "justifyContent": "center",
          "shadowRadius": 4,
          "width": 670,
        },
        undefined,
        Object {
          "opacity": 0.6,
        },
      ]
    }
  >
    <ActivityIndicator
      animating={false}
      color="#D2DCFF"
      hidesWhenStopped={true}
      size="small"
      style={
        Object {
          "height": 12,
          "left": 15,
          "position": "absolute",
          "top": 15,
        }
      }
    />
    <RNLinearTextGradient
      accessible={true}
      allowFontScaling={true}
      colors={
        Array [
          4294962687,
          4292663551,
          4292736255,
        ]
      }
      ellipsizeMode="tail"
      gradientEnd={
        Object {
          "x": 1,
          "y": 1,
        }
      }
      gradientStart={
        Object {
          "x": 0,
          "y": 0,
        }
      }
      locations={
        Array [
          0,
          0.5,
          1,
        ]
      }
      style={
        Array [
          Object {
            "color": "gray",
          },
          Object {
            "fontFamily": "System",
            "fontSize": 11,
            "fontWeight": "600",
            "letterSpacing": 0.41,
          },
        ]
      }
    >
      15013B10-4256-4D32-B25F-A031DFB6CE95
    </RNLinearTextGradient>
  </View>
</View>
`;

exports[`Button renders correctly in full width 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#322A51",
          "borderRadius": 7,
          "height": 46,
          "justifyContent": "center",
          "shadowRadius": 4,
          "width": 670,
        },
        undefined,
      ]
    }
  >
    <ActivityIndicator
      animating={false}
      color="#D2DCFF"
      hidesWhenStopped={true}
      size="small"
      style={
        Object {
          "height": 12,
          "left": 15,
          "position": "absolute",
          "top": 15,
        }
      }
    />
    <RNLinearTextGradient
      accessible={true}
      allowFontScaling={true}
      colors={
        Array [
          4294962687,
          4292663551,
          4292736255,
        ]
      }
      ellipsizeMode="tail"
      gradientEnd={
        Object {
          "x": 1,
          "y": 1,
        }
      }
      gradientStart={
        Object {
          "x": 0,
          "y": 0,
        }
      }
      locations={
        Array [
          0,
          0.5,
          1,
        ]
      }
      style={
        Array [
          Object {
            "color": "gray",
          },
          Object {
            "fontFamily": "System",
            "fontSize": 11,
            "fontWeight": "600",
            "letterSpacing": 0.41,
          },
        ]
      }
    >
      099349FD-1C84-415B-818F-C8C6AF2EA8E7
    </RNLinearTextGradient>
  </View>
</View>
`;
